
syntax = "proto3";

package query;

// The gRPC service definition
service Query {
    // Read logs for a specific tenant within a date range
    rpc ReadLogs (ReadLogsRequest) returns (ReadLogsResponse);
}

// Request message for the ReadLogs service
message ReadLogsRequest {
    string tenant = 1;
    string date_from = 2;  // Expected in ISO 8601 format
    string date_to = 3;    // Expected in ISO 8601 format
}

// Response message containing log entries
message ReadLogsResponse {
    repeated LogEntry logs = 1;
}

// A single log entry
message LogEntry {
    string datetime = 1;
    string tenant_name = 2;
    string item_id = 3;
    string status = 4;
    double qty = 5;
}
